--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('{{ url_for('static', filename='images/background.jpg') }}');
+            background-image: url('https://raw.githubusercontent.com/dheerajreddy71/Farmer-desk/main/background.jpg');
             background-size: cover;
             color: #333;
             margin: 0;
